--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <section class="container-fluid footer_section">
     <p>
       Copyright &copy; 2025 - Desenvolvido por Daniel Aguiar
-      <a href="https://html.design/">Portfólio</a>
+      <a href="https://danielaguiar-dev.netlify.app/" target="_blank"> - Portfólio</a>
     </p>
   </section>
   <!-- footer section -->
